--- a/output.css
+++ b/output.css
@@ -152,8 +152,12 @@
   margin-left: 0.25rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
